--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "@sentry/browser": "^5.27.1",
     "aws-amplify": "^3.3.4",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
