--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-node_modules
+# dependencies
+/node_modules
 
-./src/config
-.config
+# testing
+/coverage
 
+# production
+/build
+
+# misc
+.DS_Store
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.config.js
+/config.js
