--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ yarn-debug.log*
 yarn-error.log*
 
 .config.js
-/config.js 
-src/config.js 
+/config.js
+src/config.js
 
 #Visual Studio stuff
 lib/*.lib
@@ -24,3 +24,19 @@ lib/*.lib
 *.suo
 .vscode
 /.vscode
+
+#amplify
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/awscloudformation
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
