--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,32 @@
+# dependencies
+/node_modules
 
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.config.js
+/config.js
+src/config.js
+
+#Visual Studio stuff
+lib/*.lib
+*.ncb
+*.suo
+.vscode
+/.vscode
 
 #amplify
+/amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
 amplify/mock-data
@@ -15,3 +41,7 @@ amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
+
+#graphql 
+src/graphql
+schema.json
