--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "originate-client",
-  "author": "Originate Limited",
+  "author": "Originate Capital Inc",
   "licence": "MIT",
   "version": "1.0.0",
   "private": false,
@@ -27,11 +27,12 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "@mrmlnc/readdir-enhanced": "^2.2.1",
     "@sentry/browser": "^5.27.1",
     "aws-amplify": "^3.3.20",
     "aws-sdk": "^2.802.0",
@@ -39,6 +40,7 @@
     "clsx": "^1.1.1",
     "d3-scale": "^3.2.3",
     "date-fns": "^2.16.1",
+    "fast-glob": "^3.2.7",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.21",
