--- a/package.json
+++ b/package.json
@@ -57,12 +57,13 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^4.0.3",
     "react-simple-maps": "^2.3.0",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "terser-brunch": "^4.1.0"
   }
 }
