--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "history": "^5.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.27.0",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "node-fetch": "^2.6.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
