--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^1.1.1",
     "d3-scale": "^3.2.3",
     "date-fns": "^2.16.1",
+    "dotenv": "^8.2.0",
     "fast-glob": "^3.2.7",
     "formik": "^2.1.5",
     "history": "^5.0.0",
@@ -60,6 +61,7 @@
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.3",
     "react-simple-maps": "^2.3.0",
+    "react-swipeable-views": "^0.14.0",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
