--- a/.gitignore
+++ b/.gitignore
@@ -25,13 +25,21 @@ lib/*.lib
 .vscode
 /.vscode
 
+#graphql
+src/graphql
+schema.json
+
+#env
+*.env
+
 #amplify
-/amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
+amplify/logs
 amplify/mock-data
 amplify/backend/amplify-meta.json
 amplify/backend/awscloudformation
+amplify/backend/.temp
 build/
 dist/
 node_modules/
@@ -41,10 +49,4 @@ amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
-
-#graphql 
-src/graphql
-schema.json
-
-#env
-*.env
+.secret-*
