--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
     "react-scripts": "^5.0.0",
     "react-simple-maps": "^2.3.0",
     "react-swipeable-views": "^0.14.0",
+    "util": "^0.12.4",
     "uuid": "^8.3.0",
-    "yup": "^0.29.3"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "prettier": "^1.19.1",
