--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -70,6 +70,41 @@
           ]
         }
       ]
+    },
+    "newinvoicenotification": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "originateclient84cf992c",
+          "attributes": [
+            "UserPoolId"
+          ]
+        },
+        {
+          "category": "api",
+          "resourceName": "originateclientdev",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ]
+        },
+        {
+          "category": "function",
+          "resourceName": "plaid",
+          "attributes": [
+            "Name"
+          ]
+        }
+      ]
+    }
+  },
+  "analytics": {
+    "originateclient": {
+      "service": "Pinpoint",
+      "providerPlugin": "awscloudformation"
     }
   }
 }
