--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -101,10 +101,5 @@
       ]
     }
   },
-  "analytics": {
-    "originateclient": {
-      "service": "Pinpoint",
-      "providerPlugin": "awscloudformation"
-    }
-  }
+  "analytics": {}
 }
