--- a/package.json
+++ b/package.json
@@ -33,40 +33,43 @@
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "@mrmlnc/readdir-enhanced": "^2.2.1",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.76",
+    "@mui/material": "^5.6.0",
+    "@mui/styles": "^5.6.0",
     "@sentry/browser": "^5.27.1",
-    "aws-amplify": "^4.3.4",
+    "aws-amplify": "^3.3.20",
     "aws-sdk": "^2.802.0",
+    "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
     "d3-scale": "^3.2.3",
     "date-fns": "^2.16.1",
-    "dotenv": "^8.2.0",
     "fast-glob": "^3.2.7",
     "formik": "^2.1.5",
     "history": "^5.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.27.0",
-    "moment-locales-webpack-plugin": "^1.2.0",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^2.6.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
+    "react": "^17.0.0",
     "react-chartjs-2": "^2.11.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.0",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-number-format": "^4.4.1",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-plaid-link": "^3.3.0",
+    "react-plaid-link": "^3.3.1",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^4.0.0",
     "react-simple-maps": "^2.3.0",
     "react-swipeable-views": "^0.14.0",
     "util": "^0.12.4",
     "uuid": "^8.3.0",
-    "yup": "^0.32.11"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "terser-brunch": "^4.1.0"
+    "prettier": "^1.19.1"
   }
 }
