--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "private": false,
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -29,7 +30,6 @@
     "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mrmlnc/readdir-enhanced": "^2.2.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.6.0",
@@ -39,15 +39,12 @@
     "aws-sdk": "^2.802.0",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "core-js": "^3.21.1",
     "d3-scale": "^3.2.3",
     "date-fns": "^2.16.1",
-    "fast-glob": "^3.2.7",
     "formik": "^2.1.5",
-    "history": "^5.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.27.0",
-    "node-fetch": "^2.6.1",
-    "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-chartjs-2": "^2.11.1",
@@ -62,6 +59,7 @@
     "react-scripts": "^5.0.0",
     "react-simple-maps": "^2.3.0",
     "react-swipeable-views": "^0.14.0",
+    "source-map-explorer": "^2.5.2",
     "util": "^0.12.4",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
