--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "originateclient84cf992c": {
+    "originateclientprod796edffc": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -8,7 +8,7 @@
     }
   },
   "api": {
-    "originateclientdev": {
+    "originateclientprod": {
       "service": "AppSync",
       "providerPlugin": "awscloudformation",
       "output": {
@@ -16,90 +16,18 @@
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authoriginateclient84cf992c"
+              "userPoolId": "authoriginateclientprod796edffc"
             }
           },
-          "additionalAuthenticationProviders": [
-            {
-              "authenticationType": "AWS_IAM"
-            }
-          ]
+          "additionalAuthenticationProviders": []
         }
       }
-    },
-    "plaid": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "plaid",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
     }
   },
   "storage": {
-    "s330286d4d": {
+    "originateprodstorage": {
       "service": "S3",
       "providerPlugin": "awscloudformation"
     }
-  },
-  "function": {
-    "plaid": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "auth",
-          "resourceName": "originateclient84cf992c",
-          "attributes": [
-            "UserPoolId"
-          ]
-        },
-        {
-          "category": "api",
-          "resourceName": "originateclientdev",
-          "attributes": [
-            "GraphQLAPIIdOutput",
-            "GraphQLAPIEndpointOutput"
-          ]
-        }
-      ]
-    },
-    "newinvoicenotification": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "auth",
-          "resourceName": "originateclient84cf992c",
-          "attributes": [
-            "UserPoolId"
-          ]
-        },
-        {
-          "category": "api",
-          "resourceName": "originateclientdev",
-          "attributes": [
-            "GraphQLAPIIdOutput",
-            "GraphQLAPIEndpointOutput"
-          ]
-        },
-        {
-          "category": "function",
-          "resourceName": "plaid",
-          "attributes": [
-            "Name"
-          ]
-        }
-      ]
-    }
-  },
-  "analytics": {}
+  }
 }
