--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ schema.json
 #env
 *.env
 
+#ammplify
+/amplify
+
 #amplify-do-not-edit-begin
 amplify/\#current-cloud-backend
 amplify/.config/local-*
