--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
   "auth": {
-    "originateclient84cf992c": {
+    "originateclientprod796edffc": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
@@ -8,7 +8,7 @@
     }
   },
   "api": {
-    "originateclientdev": {
+    "originateclientprod": {
       "service": "AppSync",
       "providerPlugin": "awscloudformation",
       "output": {
@@ -16,7 +16,7 @@
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authoriginateclient84cf992c"
+              "userPoolId": "authoriginateclientprod796edffc"
             }
           },
           "additionalAuthenticationProviders": [
@@ -25,16 +25,7 @@
             }
           ]
         }
-      },
-      "dependsOn": [
-        {
-          "category": "auth",
-          "resourceName": "originateclient84cf992c",
-          "attributes": [
-            "UserPoolId"
-          ]
-        }
-      ]
+      }
     },
     "plaid": {
       "service": "API Gateway",
@@ -52,10 +43,9 @@
     }
   },
   "storage": {
-    "s330286d4d": {
+    "originateprodstorage": {
       "service": "S3",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": []
+      "providerPlugin": "awscloudformation"
     }
   },
   "function": {
@@ -66,14 +56,14 @@
       "dependsOn": [
         {
           "category": "auth",
-          "resourceName": "originateclient84cf992c",
+          "resourceName": "originateclientprod796edffc",
           "attributes": [
             "UserPoolId"
           ]
         },
         {
           "category": "api",
-          "resourceName": "originateclientdev",
+          "resourceName": "originateclientprod",
           "attributes": [
             "GraphQLAPIIdOutput",
             "GraphQLAPIEndpointOutput"
@@ -88,14 +78,14 @@
       "dependsOn": [
         {
           "category": "auth",
-          "resourceName": "originateclient84cf992c",
+          "resourceName": "originateclientprod796edffc",
           "attributes": [
             "UserPoolId"
           ]
         },
         {
           "category": "api",
-          "resourceName": "originateclientdev",
+          "resourceName": "originateclientprod",
           "attributes": [
             "GraphQLAPIIdOutput",
             "GraphQLAPIEndpointOutput"
@@ -110,6 +100,5 @@
         }
       ]
     }
-  },
-  "analytics": {}
+  }
 }
