--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -46,6 +46,9 @@
     "originateprodstorage": {
       "service": "S3",
       "providerPlugin": "awscloudformation"
+    },
+    "s330286d4d": {
+      "dependsOn": []
     }
   },
   "function": {
