--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -21,6 +21,14 @@
           },
           "additionalAuthenticationProviders": [
             {
+              "authenticationType": "API_KEY",
+              "apiKeyConfig": {
+                "apiKeyExpirationDays": 365,
+                "apiKeyExpirationDate": "2023-05-04T04:15:21.514Z",
+                "description": "originatedev-appsync-key"
+              }
+            },
+            {
               "authenticationType": "AWS_IAM"
             }
           ]
@@ -43,6 +51,20 @@
         {
           "category": "function",
           "resourceName": "plaid",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
+    },
+    "zoho": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "zoho",
           "attributes": [
             "Name",
             "Arn"
@@ -106,6 +128,22 @@
           "resourceName": "plaid",
           "attributes": [
             "Name"
+          ]
+        }
+      ]
+    },
+    "zoho": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "originateclientdev",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput",
+            "GraphQLAPIKeyOutput"
           ]
         }
       ]
