--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -149,5 +149,10 @@
       ]
     }
   },
-  "analytics": {}
+  "analytics": {
+    "originatetest": {
+      "service": "Pinpoint",
+      "providerPlugin": "awscloudformation"
+    }
+  }
 }
