--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -71,6 +71,20 @@
           ]
         }
       ]
+    },
+    "ocdefi": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "ocdefi",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
     }
   },
   "storage": {
@@ -147,6 +161,11 @@
           ]
         }
       ]
+    },
+    "ocdefi": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
     }
   },
   "analytics": {
