--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -171,7 +171,8 @@
     "sofr": {
       "build": true,
       "providerPlugin": "awscloudformation",
-      "service": "Lambda"
+      "service": "Lambda",
+      "dependsOn": []
     }
   },
   "analytics": {
