--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -116,8 +116,6 @@
           ]
         }
       ]
-<<<<<<< HEAD
-=======
     },
     "zoho": {
       "build": true,
@@ -147,14 +145,14 @@
       "dependsOn": [
         {
           "category": "auth",
-          "resourceName": "originateclient84cf992c",
+          "resourceName": "originateclientprod796edffc",
           "attributes": [
             "UserPoolId"
           ]
         },
         {
           "category": "api",
-          "resourceName": "originateclientdev",
+          "resourceName": "originateclientprod",
           "attributes": [
             "GraphQLAPIIdOutput",
             "GraphQLAPIEndpointOutput",
@@ -164,15 +162,10 @@
       ]
     }
   },
-<<<<<<< HEAD
   "analytics": {
     "originatetest": {
       "service": "Pinpoint",
       "providerPlugin": "awscloudformation"
->>>>>>> 7ed399feac981ec9324b244080c5352757c943d2
     }
   }
-=======
-  "analytics": {}
->>>>>>> 3f9b95a83954fbab4953d01dc26138e42d85a0e1
 }
