--- a/package.json
+++ b/package.json
@@ -27,35 +27,36 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "^7.17.10",
-    "@date-io/date-fns": "^2.13.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.6.0",
+    "@aws-amplify/datastore": "^3.12.1",
+    "@babel/core": "^7.18.6",
+    "@date-io/date-fns": "^2.14.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.76",
-    "@mui/material": "^5.6.0",
-    "@mui/styles": "^5.6.0",
-    "@sentry/browser": "^6.19.6",
-    "aws-amplify": "^4.3.19",
-    "aws-sdk": "^2.1111.0",
+    "@mui/material": "^5.8.7",
+    "@mui/styles": "^5.8.7",
+    "@sentry/browser": "^7.5.1",
+    "aws-amplify": "^4.3.26",
+    "aws-sdk": "^2.1169.0",
     "babel-loader": "^8.2.5",
-    "chart.js": "^3.7.1",
-    "clsx": "^1.1.1",
+    "chart.js": "^3.8.0",
+    "clsx": "^1.2.1",
     "d3-scale": "^4.0.2",
     "date-fns": "^2.16.1",
     "eslint-config-react-app": "^7.0.1",
     "formik": "^2.1.5",
     "lodash": "^4.17.21",
-    "moment": "^2.27.0",
+    "moment": "^2.29.4",
     "prop-types": "^15.7.2",
-    "react": "^17.0.0",
-    "react-chartjs-2": "^4.1.0",
-    "react-dom": "^17.0.0",
-    "react-feather": "^2.0.8",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^4.2.0",
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
-    "react-number-format": "^4.4.1",
+    "react-number-format": "^4.9.3",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-plaid-link": "^3.3.1",
+    "react-plaid-link": "^3.3.2",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^5.0.0",
@@ -67,8 +68,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-react": "^7.18.6",
     "@types/uuid": "^8.3.4",
-    "prettier": "^2.6.2"
+    "prettier": "^2.7.1"
   }
 }
