--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^1.2.1",
     "d3-scale": "^4.0.2",
     "date-fns": "^2.16.1",
+    "dompurify": "^2.3.10",
     "eslint-config-react-app": "^7.0.1",
     "formik": "^2.1.5",
     "lodash": "^4.17.21",
@@ -69,6 +70,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
+    "@types/dompurify": "^2.3.3",
     "@types/uuid": "^8.3.4",
     "prettier": "^2.7.1"
   }
