--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,35 +1,14 @@
 {
   "auth": {
-    "originateclient84cf992c": {
+    "originateclientprod796edffc": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
-      "customAuth": false,
-      "frontendAuthConfig": {
-        "socialProviders": [],
-        "usernameAttributes": [
-          "EMAIL",
-          "PHONE_NUMBER"
-        ],
-        "signupAttributes": [
-          "EMAIL"
-        ],
-        "passwordProtectionSettings": {
-          "passwordPolicyMinLength": 8,
-          "passwordPolicyCharacters": []
-        },
-        "mfaConfiguration": "OFF",
-        "mfaTypes": [
-          "SMS"
-        ],
-        "verificationMechanisms": [
-          "EMAIL"
-        ]
-      }
+      "customAuth": false
     }
   },
   "api": {
-    "originateclientdev": {
+    "originateclientprod": {
       "service": "AppSync",
       "providerPlugin": "awscloudformation",
       "output": {
@@ -37,20 +16,20 @@
           "defaultAuthentication": {
             "authenticationType": "AMAZON_COGNITO_USER_POOLS",
             "userPoolConfig": {
-              "userPoolId": "authoriginateclient84cf992c"
+              "userPoolId": "authoriginateclientprod796edffc"
             }
           },
           "additionalAuthenticationProviders": [
             {
+              "authenticationType": "AWS_IAM"
+            },
+            {
               "authenticationType": "API_KEY",
               "apiKeyConfig": {
                 "apiKeyExpirationDays": 365,
-                "apiKeyExpirationDate": "2023-05-04T04:15:21.514Z",
-                "description": "originatedev-appsync-key"
+                "apiKeyExpirationDate": "2023-06-29T07:01:37.456Z",
+                "description": "search-api-key-prod"
               }
-            },
-            {
-              "authenticationType": "AWS_IAM"
             }
           ]
         }
@@ -58,7 +37,7 @@
       "dependsOn": [
         {
           "category": "auth",
-          "resourceName": "originateclient84cf992c",
+          "resourceName": "originateclientprod796edffc",
           "attributes": [
             "UserPoolId"
           ]
@@ -78,55 +57,12 @@
           ]
         }
       ]
-    },
-    "zoho": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "zoho",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
-    },
-    "ocdefi": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "ocdefi",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
-    },
-    "zohooffer": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "zohooffer",
-          "attributes": [
-            "Name",
-            "Arn"
-          ]
-        }
-      ]
     }
   },
   "storage": {
-    "s330286d4d": {
+    "originateprodstorage": {
       "service": "S3",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": []
+      "providerPlugin": "awscloudformation"
     }
   },
   "function": {
@@ -137,14 +73,14 @@
       "dependsOn": [
         {
           "category": "auth",
-          "resourceName": "originateclient84cf992c",
+          "resourceName": "originateclientprod796edffc",
           "attributes": [
             "UserPoolId"
           ]
         },
         {
           "category": "api",
-          "resourceName": "originateclientdev",
+          "resourceName": "originateclientprod",
           "attributes": [
             "GraphQLAPIIdOutput",
             "GraphQLAPIEndpointOutput"
@@ -180,14 +116,14 @@
       "dependsOn": [
         {
           "category": "auth",
-          "resourceName": "originateclient84cf992c",
+          "resourceName": "originateclientprod796edffc",
           "attributes": [
             "UserPoolId"
           ]
         },
         {
           "category": "api",
-          "resourceName": "originateclientdev",
+          "resourceName": "originateclientprod",
           "attributes": [
             "GraphQLAPIIdOutput",
             "GraphQLAPIEndpointOutput",
@@ -203,7 +139,7 @@
       "dependsOn": [
         {
           "category": "api",
-          "resourceName": "originateclientdev",
+          "resourceName": "originateclientprod",
           "attributes": [
             "GraphQLAPIIdOutput",
             "GraphQLAPIEndpointOutput"
@@ -211,14 +147,14 @@
         },
         {
           "category": "auth",
-          "resourceName": "originateclient84cf992c",
+          "resourceName": "originateclientprod796edffc",
           "attributes": [
             "UserPoolId"
           ]
         },
         {
           "category": "api",
-          "resourceName": "originateclientdev",
+          "resourceName": "originateclientprod",
           "attributes": [
             "GraphQLAPIIdOutput",
             "GraphQLAPIEndpointOutput",
@@ -234,30 +170,14 @@
       "dependsOn": [
         {
           "category": "auth",
-          "resourceName": "originateclient84cf992c",
+          "resourceName": "originateclientprod796edffc",
           "attributes": [
             "UserPoolId"
           ]
         },
         {
           "category": "api",
-          "resourceName": "originateclientdev",
-          "attributes": [
-            "GraphQLAPIIdOutput",
-            "GraphQLAPIEndpointOutput",
-            "GraphQLAPIKeyOutput"
-          ]
-        }
-      ]
-    },
-    "zohooffer": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "api",
-          "resourceName": "originateclientdev",
+          "resourceName": "originateclientprod",
           "attributes": [
             "GraphQLAPIIdOutput",
             "GraphQLAPIEndpointOutput",
@@ -267,5 +187,10 @@
       ]
     }
   },
-  "analytics": {}
+  "analytics": {
+    "originatetest": {
+      "service": "Pinpoint",
+      "providerPlugin": "awscloudformation"
+    }
+  }
 }
